--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         android:icon="@drawable/ic_launcher_screen_off"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <service android:name=".service.SensorMonitorService" android:process=":Monitor" android:label="@string/service_label" android:description="@string/service_label">           
+        <service android:name=".service.SensorMonitorService" android:label="@string/service_label" android:description="@string/service_label">
         </service>
 
         <activity
